--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.0.0",
     "connect-busboy": "0.0.2",
-    "connect-flash": "0.1.1",
     "connect-multiparty": "^1.2.5",
     "cookie-parser": "~1.0.1",
     "crypto": "0.0.3",
     "debug": "~0.7.4",
     "errorhandler": "^1.4.0",
     "express": "~4.0.0",
+    "express-flash": "0.0.2",
     "express-session": "^1.11.3",
     "forms": "^1.1.1",
     "gm": "^1.17.0",
