--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.0.0",
     "connect-busboy": "0.0.2",
     "connect-multiparty": "^1.2.5",
+    "connect-redis": "^2.2.0",
     "cookie-parser": "~1.0.1",
     "crypto": "0.0.3",
     "debug": "~0.7.4",
@@ -18,7 +19,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.11.3",
     "forms": "^1.1.1",
-    "gm": "^1.17.0",
+    "gm": "^1.18.1",
     "jwt-simple": "0.2.0",
     "lodash": "latest",
     "moment": "^2.10.3",
@@ -27,6 +28,8 @@
     "nodemailer": "^1.3.4",
     "nodemailer-express-handlebars": "0.0.3",
     "nunjucks": "^1.3.4",
+    "nunjucks-date": "^1.1.2",
+    "nunjucks-date-filter": "^0.1.0",
     "passport": "0.2.0",
     "passport-facebook": "1.0.3",
     "passport-github2": "^0.1.5",
