--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-busboy": "0.0.2",
     "connect-multiparty": "^1.2.5",
     "connect-redis": "^2.2.0",
+    "connect-timeout": "^1.6.2",
     "cookie-parser": "~1.0.1",
     "crypto": "0.0.3",
     "debug": "~0.7.4",
@@ -42,6 +43,7 @@
     "sequelize-mysql": "latest",
     "serve-favicon": "~2.1.3",
     "underscore": "latest",
+    "uuid": "^2.0.1",
     "validator": "^3.40.1"
   }
 }
