--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mysql": "^2.7.0",
     "nodemailer": "^1.3.4",
     "nodemailer-express-handlebars": "0.0.3",
-    "nunjucks": "^1.3.4",
+    "nunjucks": "*",
     "nunjucks-date": "^1.1.2",
     "nunjucks-date-filter": "^0.1.0",
     "passport": "0.2.0",
